--- a/volleyball/Info.plist
+++ b/volleyball/Info.plist
@@ -34,6 +34,11 @@
 	<true/>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>spincycle_3d_ot.otf</string>
+		<string>spincycle_ot.otf</string>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
